fix: image align-self in flex

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -9,6 +9,7 @@
 }
 
 .default-picture {
+	align-self: flex-start;
 	height: 40vh;
 }
 
@@ -35,6 +36,7 @@
 }
 
 .art-picture-frame {
+	align-self: flex-start;
 	background-color: var(--background-modifier-border);
 	border: solid 2vmin var(--background-primary-alt);
 	border-bottom-color: var(--background-secondary-alt);
@@ -47,7 +49,8 @@
 	display: inline-block;
 	/*margin: 10vh 10vw;*/
 	/*height: 45vh;*/
-	width: 40vh;
+	width: 35vh;
+	height: auto;
 	padding: 2vmin;
 	position: relative;
 	text-align: center;
